DecompressionStream behaves differently from Chrome when reached the stream end with extra data
Categories
(Core :: DOM: Streams, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox145 | --- | fixed |
People
(Reporter: spalt08, Assigned: saschanaz)
References
Details
(Keywords: parity-chrome)
Attachments
(2 files)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36
Steps to reproduce:
Hi,
Reproduction script is attached.
When working with DecompressionStream API I noticed a major difference between Safari, Chrome and Firefox.
If you pass compressed binary data with arbitrary padding, the compression stream fails, however:
- In Chrome you can actually read chunks of decompressed data before encountering an error:
TypeError: Junk found after end of compressed data. - In Firefox and Safari behaviour depends on chunking and, in case the last chunk has some extra bytes, output is discarded and an error is triggered:
TypeError: Extra bytes past the end.(Safari) andTypeError: Unexpected input after the end of stream(Firefox)
Actual results:
After checking the spec, both behaviours are spec-compliant, since:
- The spec requires that trailing data after the end of a compressed stream is an error for all three formats.
- During per-chunk processing: decompress and enqueue a chunk says "Let buffer be the result of decompressing… If this results in an error, then throw a TypeError." That means an implementation that notices the trailing bytes while handling a single incoming chunk can throw immediately, before enqueuing anything.
- At the end (on close): decompress flush and enqueue says "If the end of the compressed input has not been reached, then throw a TypeError." If earlier chunks already produced output and only the final validation fails, an implementation may have already enqueued some decompressed bytes before the final error is thrown.
The spec does not mandate detecting the trailing-data error as early as possible versus only on flush, nor does it require suppressing already-enqueued output if a later error occurs. It only mandates that trailing data is an error. So Chrome’s "emit some output, then throw on close" and Firefox/Safari’s "throw without emitting" are both consistent with the current algorithms.
Expected results:
An actual problem comes when you start passing chunked input data to the decompression stream. Let's say you feed the stream with two chunks: first one is valid and the second one is partially valid and has arbitrary padding. In this case:
- The same JS code will produce different results in Chrome and Firefox/Safari
- JS-based alternatives such as
pakoorfflatehandles such cases without any problems - There's no way to tell if compressed stream is valid or padded before passing the whole payload through the
DecompressionStreamand so far the only reliable option is to tryDecompressionStreamand gracefully fallback to JS-based libraries - Actual wording in the
TypeErroris vendor-specific and not defined by spec (therefore might change in the future), so checking if the compressed data is invalid/corrupted or just padded with arbitrary data is tricky
The reason I'm filing the ticket is because I believe Chrome's approach is more robust and intuitive and I would love to see the same behaviour in Firefox
| Assignee | ||
Comment 1•8 months ago
|
||
This looks like more a spec issue than an implementation issue, as you already found. Can you file a spec issue in https://github.com/whatwg/streams/issues ? Thanks!
| Assignee | ||
Updated•8 months ago
|
| Reporter | ||
Comment 2•8 months ago
|
||
Spec ticket: https://github.com/whatwg/streams/issues/1357
| Reporter | ||
Comment 3•8 months ago
|
||
While I agree that's the spec issue, I still believe Chrome's approach is more robust and intuitive and does not contradict the spec.
Would be really nice to have the same behaviour in FF :)
| Assignee | ||
Comment 4•8 months ago
|
||
Let's talk about that in the spec issue.
| Assignee | ||
Comment 5•8 months ago
|
||
And thank you for finding the right place, even though I gave you the wrong one 🙈
| Assignee | ||
Updated•8 months ago
|
| Assignee | ||
Updated•8 months ago
|
| Assignee | ||
Comment 6•8 months ago
|
||
This corresponds to the not-merged-yet spec PR: https://github.com/whatwg/compression/pull/77
Comment 9•8 months ago
|
||
| bugherder | ||
Updated•8 months ago
|
Description
•