Bug 1990921 - Enqueue the decode result even if stream end is met r=smaug

This corresponds to the not-merged-yet spec PR: https://github.com/whatwg/compression/pull/77

Differential Revision: https://phabricator.services.mozilla.com/D266433